[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/UI/MachiningPreviewCard.gd" type="Script" id=1]
[ext_resource path="res://Data/Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Data/Textures/UI/Machines/BurnerIcon.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.635294, 0.635294, 0.635294, 0.52549 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="DynamicFont" id=2]
size = 40
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[node name="MachiningPreviewCard" type="Control"]
margin_right = 480.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 480.0
margin_bottom = 300.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MachineIcon" type="TextureRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 120.0
margin_bottom = 120.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MachineName" type="Label" parent="."]
margin_left = 136.0
margin_top = 8.0
margin_right = 406.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Machine Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MachineDesc" type="Label" parent="."]
margin_left = 16.0
margin_top = 128.0
margin_right = 464.0
margin_bottom = 288.0
rect_min_size = Vector2( 448, 160 )
custom_fonts/font = SubResource( 3 )
text = "Here is a description of the machine in as much detail as possible."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftButton" type="Button" parent="."]
margin_left = 136.0
margin_top = 80.0
margin_right = 224.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 4 )
text = "Craft"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CraftButton" to="." method="_on_CraftButton_pressed"]
